--- a/shop.html
+++ b/shop.html
@@ -42,8 +42,8 @@
     <!--Footer Start-->
     <footer>
       <ul style="list-style: none;">
-        <li><a href="https://www.tiktok.com/@_offenz_"><img src="Resources/tiktok.png" alt="Tiktok"></a></li>
-        <li><a href="https://www.instagram.com/_offenz_/"><img src="Resources/instagram.png" alt="Instagram"></a></li>
+        <li><a href="https://www.tiktok.com/@_offenz_" target="_blank"><img src="Resources/tiktok.png" alt="Tiktok"></a></li>
+        <li><a href="https://www.instagram.com/_offenz_/" target="_blank"><img src="Resources/instagram.png" alt="Instagram"></a></li>
       </ul>
     </footer>
     <!--Footer End-->
