--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       </div>
       
       <div class="nav-links" style="padding-right: 20px; padding-top: 20px;">
-        <a href="index.html">Home</a>
+        <a href="index.html" >Home</a>
         <a href="shop.html">Shop</a>
         <a href="about.html">About</a>
       </div>
@@ -42,8 +42,8 @@
     <!--Footer Start-->
     <footer>
       <ul style="list-style: none;">
-        <li><a href="https://www.tiktok.com/@_offenz_"><img src="Resources/tiktok.png" alt="Tiktok"></a></li>
-        <li><a href="https://www.instagram.com/_offenz_/"><img src="Resources/instagram.png" alt="Instagram"></a></li>
+        <li><a href="https://www.tiktok.com/@_offenz_" target="_blank"><img src="Resources/tiktok.png" alt="Tiktok"></a></li>
+        <li><a href="https://www.instagram.com/_offenz_/" target="_blank"><img src="Resources/instagram.png" alt="Instagram"></a></li>
       </ul>
     </footer>
     <!--Footer End-->
